Upload the portfolio webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,112 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><script type="text/javascript">!function(n){if("/"===n.search[1]){var a=n.search.slice(1).split("&").map((function(n){return n.replace(/~and~/g,"&")})).join("?");window.history.replaceState(null,null,n.pathname.slice(0,-1)+a+n.hash)}}(window.location)</script><title>Todos</title><script defer="defer" src="/static/js/main.03beda9a.js"></script><link href="/static/css/main.b31c15ac.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="modalLayer"></div><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Farbod Mahdian</title>
+    <link rel="stylesheet" href="styles.css" >
+    <link rel="developer icon" type="image/x-icon" href="asset/developer_logo.png" />
+</head>
+<body>
+    <section>
+        <div id="header_sec">
+            <img id="profile_pic" src="asset\profile_pic.jpg" alt="Profile Picture" />
+            <div>
+                <h1 id="my_name">Farbod Mahdian</h1>
+                <p id="career">Software Engineer</p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h1 class="title">About Me</h1>
+        <div id="about_me__sec">
+            <p id="about_me">A dedicated software engineer, I always strive to learn about new technologies and concepts to enhance my skills and develop efficient code for business needs. Solving various problems challenges me and fuels my career growth. Continuously seeking existing problems to solve, I believe there's no challenge I can't tackle, given the wide variety of programming languages available today. My programming journey began in middle school when I self-drivenly sought a private tutor to learn C++, a decision that significantly improved my critical thinking and problem-solving abilities. Since then, I've expanded my skills to include various languages and technologies, enabling me to work on diverse projects such as solving math and physics problems, designing Windows form applications, web applications, mobile applications, and developing back-end systems. In my free time, I enjoy sci-fi movies, working out, playing video games, and sports like tennis and ping-pong. Outdoor activities like escape rooms are also a favorite pastime, and I can never say no to a good cup of coffee!</p>
+        </div>
+    </section>
+    <section>
+        <h1 class="title">Projects</h1>
+        <div id="projects">
+            <div class="project">
+                <img src="asset/job_search.jpg" alt="Job Search Logo">
+                <a href="https://github.com/farbod-mahdian/job-search-helper" target="_blank">job-search-helper</a>
+            </div>
+            <div class="project">
+                <img src="asset/counter.jpg" alt="Line Character Word Counter">
+                <a href="https://github.com/farbod-mahdian/line-character-word-counter" target="_blank">line-character-word-counter</a>
+            </div>
+            <div class="project">
+                <img src="asset/multiple-choice-exam.jpg" alt="Multiple Choice Exam">
+                <a href="https://github.com/farbod-mahdian/Multiple-choice-exam" target="_blank">Multiple-choice-exam</a>
+            </div>
+            <div class="project">
+                <img src="asset/puzzle-game.jpg" alt="Word Puzzle Game">
+                <a href="https://github.com/farbod-mahdian/Word-puzzle-game" target="_blank">Word-puzzle-game</a>
+            </div>
+        </div>
+        <div id="projects">
+            <div class="project">
+                <img src="asset/shopping.jpg" alt="Shopping Logo">
+                <a href="https://github.com/farbod-mahdian/Client-Server-shopping-program" target="_blank">Client-Server-shopping-program</a>
+            </div>
+            <div class="project">
+                <img src="asset/hotel.jpg" alt="Hotel Logo">
+                <a href="https://github.com/farbod-mahdian/Hotel-booking" target="_blank">Hotel-booking</a>
+            </div>
+            <div class="project">
+                <img src="asset/lotto649.jpg" alt="Lotto649 Logo">
+                <a href="https://github.com/farbod-mahdian/lotto649-automatic-result-check" target="_blank">lotto649-automatic-result-check</a>
+            </div>
+            <div class="project">
+                <img src="asset/todo-list.jpg" alt="Todo List">
+                <a href="https://github.com/farbod-mahdian/Todo-React-Project" target="_blank">Todo-React-Project</a>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h1 class="title">Skills</h1>
+        <div id="skills">
+            <div class="skill">
+                <img src="asset/python.jpg" alt="Python Logo">
+            </div>
+            <div class="skill">
+                <img src="asset/C-plus-plus.jpg" alt="C-plus-plus Logo">
+            </div>
+            <div class="skill">
+                <img src="asset/CSharp.jpg" alt="CSharp Logo">
+            </div>
+            <div class="skill">
+                <img src="asset/bash.jpg" alt="Bash Logo">
+            </div>
+            <div class="skill">
+                <img src="asset/sql.jpg" alt="SQL Logo">
+            </div>
+        </div>
+        <div id="skills">
+            <div class="skill">
+                <img src="asset/html.jpg" alt="HTML Logo">
+            </div>
+            <div class="skill">
+                <img src="asset/css.jpg" alt="CSS Logo">
+            </div>
+            <div class="skill">
+                <img src="asset/JavaScript.jpg" alt="JavaScript Logo">
+            </div>
+            <div class="skill">
+                <img src="asset/react.jpg" alt="React and React-Native Logo">
+            </div>
+        </div>
+        <div id="skills">
+            <div class="skill">
+                <img src="asset/jenkins.jpg" alt="Jenkins Logo">
+            </div>
+            <div class="skill">
+                <img src="asset/ansible.jpg" alt="Ansible Logo">
+            </div>
+        </div>
+    </section>
+    <a id="linkedin" href="https://www.linkedin.com/in/farbod-mahdian-b86871188/" target="_blank"><img class="social" src="asset/linkedin.gif" alt="linkedin" /></a>
+</body>
+<footer>
+    <p>© Copyright 2024 - Farbod Mahdian</p>
+</footer>
+</html>
