Apply my promotion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img id="profile_pic" src="asset\profile_pic.jpg" alt="Profile Picture" />
             <div>
                 <h1 id="my_name">Farbod Mahdian</h1>
-                <p id="career">Software Engineer</p>
+                <p id="career">Senior Software Engineer</p>
             </div>
         </div>
     </section>
