--- a/index.html
+++ b/index.html
@@ -1,112 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farbod Mahdian</title>
-    <link rel="stylesheet" href="styles.css" >
-    <link rel="developer icon" type="image/x-icon" href="asset/developer_logo.png" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Farbod Mahdian — Software Engineer</title>
+  <link rel="icon" type="image/png" href="asset/developer_logo.png" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <section>
-        <div id="header_sec">
-            <img id="profile_pic" src="asset\profile_pic.jpg" alt="Profile Picture" />
-            <div>
-                <h1 id="my_name">Farbod Mahdian</h1>
-                <p id="career">Senior Software Engineer</p>
-            </div>
+  <!-- Boot overlay -->
+  <div class="boot-overlay" id="boot">
+    <div class="boot-lines" id="bootLines"></div>
+    <div class="boot-footer">
+      <div class="progress-wrap"><div class="progress-bar" id="bootProgress"></div></div>
+      <div class="boot-hint">Booting terminal... (press Esc to skip)</div>
+    </div>
+  </div>
+
+  <!-- Terminal UI -->
+  <main class="terminal" id="terminal">
+    <div class="term-header">
+      <div class="dots">
+        <span class="dot red"></span>
+        <span class="dot yellow"></span>
+        <span class="dot green"></span>
+      </div>
+      <div class="title-info">
+        <div>
+            <strong>Farbod Mahdian</strong><br />
+            <small>Software Engineer</small>
         </div>
-    </section>
-    <section>
-        <h1 class="title">About Me</h1>
-        <div id="about_me__sec">
-            <p id="about_me">A dedicated software engineer, I always strive to learn about new technologies and concepts to enhance my skills and develop efficient code for business needs. Solving various problems challenges me and fuels my career growth. Continuously seeking existing problems to solve, I believe there's no challenge I can't tackle, given the wide variety of programming languages available today. My programming journey began in middle school when I self-drivenly sought a private tutor to learn C++, a decision that significantly improved my critical thinking and problem-solving abilities. Since then, I've expanded my skills to include various languages and technologies, enabling me to work on diverse projects such as solving math and physics problems, designing Windows form applications, web applications, mobile applications, and developing back-end systems. In my free time, I enjoy sci-fi movies, working out, playing video games, and sports like tennis and ping-pong. Outdoor activities like escape rooms are also a favorite pastime, and I can never say no to a good cup of coffee!</p>
+      </div>
+    </div>
+
+    <div class="term-body" id="termBody">
+      <!-- Typed lines (auto-revealed via JS) -->
+      <div class="line"><span class="prompt">user@workstation:~$</span> whoami</div>
+      <div class="line context__line">Farbod Mahdian — Software Engineer</div>
+
+      <div class="line"><span class="prompt">user@workstation:~$</span> cat about_me.txt</div>
+      <div class="line context__line">
+        A dedicated software engineer, I always strive to learn about new technologies and concepts to enhance my skills and develop efficient code for business needs. Solving various problems challenges me and fuels my career growth. Continuously seeking existing problems to solve, I believe there's no challenge I can't tackle. My programming journey began in middle school when I sought a private tutor to learn C++, a decision that improved my problem-solving abilities. Since then, I've expanded to multiple languages and technologies, developing desktop, web, and backend applications. I enjoy sci-fi movies, workouts, gaming, tennis, ping-pong, escape rooms — and coffee!
+      </div>
+
+      <div class="line"><span class="prompt">user@workstation:~$</span> ls projects/</div>
+      <div class="line context__line">
+        <div class="projects">
+          <div class="project-card">
+            <img src="asset/smart_input.jpg" alt="Python Package" />
+            <a href="https://pypi.org/project/smart-inputs/" target="_blank">smart-inputs Python package</a>
+          </div>
+          <div class="project-card">
+            <img src="asset/job_search.jpg" alt="Job Search" />
+            <a href="https://github.com/farbod-mahdian/job-search-helper" target="_blank">job-search-helper</a>
+          </div>
+          <div class="project-card">
+            <img src="asset/counter.jpg" alt="Counter" />
+            <a href="https://github.com/farbod-mahdian/line-character-word-counter" target="_blank">line-character-word-counter</a>
+          </div>
+          <div class="project-card">
+            <img src="asset/multiple-choice-exam.jpg" alt="Multiple-choice-exam" />
+            <a href="https://github.com/farbod-mahdian/Multiple-choice-exam" target="_blank">Multiple-choice-exam</a>
+          </div>
+          <div class="project-card">
+            <img src="asset/puzzle-game.jpg" alt="Word Puzzle Game" />
+            <a href="https://github.com/farbod-mahdian/Word-puzzle-game" target="_blank">Word-puzzle-game</a>
+          </div>
+          <div class="project-card">
+            <img src="asset/shopping.jpg" alt="Shopping Program" />
+            <a href="https://github.com/farbod-mahdian/Client-Server-shopping-program" target="_blank">Client-Server-shopping-program</a>
+          </div>
+          <div class="project-card">
+            <img src="asset/hotel.jpg" alt="Hotel Booking" />
+            <a href="https://github.com/farbod-mahdian/Hotel-booking" target="_blank">Hotel-booking</a>
+          </div>
+          <div class="project-card">
+            <img src="asset/lotto649.jpg" alt="Lotto649" />
+            <a href="https://github.com/farbod-mahdian/lotto649-automatic-result-check" target="_blank">lotto649-automatic-result-check</a>
+          </div>
+          <div class="project-card">
+            <img src="asset/todo-list.jpg" alt="Todo React" />
+            <a href="https://github.com/farbod-mahdian/Todo-React-Project" target="_blank">Todo-React-Project</a>
+          </div>
         </div>
-    </section>
-    <section>
-        <h1 class="title">Projects</h1>
-        <div id="projects">
-            <div class="project">
-                <img src="asset/job_search.jpg" alt="Job Search Logo">
-                <a href="https://github.com/farbod-mahdian/job-search-helper" target="_blank">job-search-helper</a>
-            </div>
-            <div class="project">
-                <img src="asset/counter.jpg" alt="Line Character Word Counter">
-                <a href="https://github.com/farbod-mahdian/line-character-word-counter" target="_blank">line-character-word-counter</a>
-            </div>
-            <div class="project">
-                <img src="asset/multiple-choice-exam.jpg" alt="Multiple Choice Exam">
-                <a href="https://github.com/farbod-mahdian/Multiple-choice-exam" target="_blank">Multiple-choice-exam</a>
-            </div>
-            <div class="project">
-                <img src="asset/puzzle-game.jpg" alt="Word Puzzle Game">
-                <a href="https://github.com/farbod-mahdian/Word-puzzle-game" target="_blank">Word-puzzle-game</a>
-            </div>
+      </div>
+
+      <div class="line"><span class="prompt">user@workstation:~$</span> cat skills.txt</div>
+      <div class="line context__line">
+        <div class="skills">
+          <div class="skill"><img src="asset/python.jpg" alt="Python" />Python</div>
+          <div class="skill"><img src="asset/C-plus-plus.jpg" alt="C++" />C++</div>
+          <div class="skill"><img src="asset/CSharp.jpg" alt="C#" />C#</div>
+          <div class="skill"><img src="asset/bash.jpg" alt="Bash" />Bash</div>
+          <div class="skill"><img src="asset/sql.jpg" alt="SQL" />SQL</div>
+          <div class="skill"><img src="asset/html.jpg" alt="HTML" />HTML</div>
+          <div class="skill"><img src="asset/css.jpg" alt="CSS" />CSS</div>
+          <div class="skill"><img src="asset/JavaScript.jpg" alt="JS" />JavaScript</div>
+          <div class="skill"><img src="asset/react.jpg" alt="React" />React</div>
+          <div class="skill"><img src="asset/jenkins.jpg" alt="Jenkins" />Jenkins</div>
+          <div class="skill"><img src="asset/ansible.jpg" alt="Ansible" />Ansible</div>
+          <div class="skill"><img src="asset/aws_logo.jpg" alt="AWS" />AWS</div>
         </div>
-        <div id="projects">
-            <div class="project">
-                <img src="asset/shopping.jpg" alt="Shopping Logo">
-                <a href="https://github.com/farbod-mahdian/Client-Server-shopping-program" target="_blank">Client-Server-shopping-program</a>
-            </div>
-            <div class="project">
-                <img src="asset/hotel.jpg" alt="Hotel Logo">
-                <a href="https://github.com/farbod-mahdian/Hotel-booking" target="_blank">Hotel-booking</a>
-            </div>
-            <div class="project">
-                <img src="asset/lotto649.jpg" alt="Lotto649 Logo">
-                <a href="https://github.com/farbod-mahdian/lotto649-automatic-result-check" target="_blank">lotto649-automatic-result-check</a>
-            </div>
-            <div class="project">
-                <img src="asset/todo-list.jpg" alt="Todo List">
-                <a href="https://github.com/farbod-mahdian/Todo-React-Project" target="_blank">Todo-React-Project</a>
-            </div>
-        </div>
-    </section>
-    <section>
-        <h1 class="title">Skills</h1>
-        <div id="skills">
-            <div class="skill">
-                <img src="asset/python.jpg" alt="Python Logo">
-            </div>
-            <div class="skill">
-                <img src="asset/C-plus-plus.jpg" alt="C-plus-plus Logo">
-            </div>
-            <div class="skill">
-                <img src="asset/CSharp.jpg" alt="CSharp Logo">
-            </div>
-            <div class="skill">
-                <img src="asset/bash.jpg" alt="Bash Logo">
-            </div>
-            <div class="skill">
-                <img src="asset/sql.jpg" alt="SQL Logo">
-            </div>
-        </div>
-        <div id="skills">
-            <div class="skill">
-                <img src="asset/html.jpg" alt="HTML Logo">
-            </div>
-            <div class="skill">
-                <img src="asset/css.jpg" alt="CSS Logo">
-            </div>
-            <div class="skill">
-                <img src="asset/JavaScript.jpg" alt="JavaScript Logo">
-            </div>
-            <div class="skill">
-                <img src="asset/react.jpg" alt="React and React-Native Logo">
-            </div>
-        </div>
-        <div id="skills">
-            <div class="skill">
-                <img src="asset/jenkins.jpg" alt="Jenkins Logo">
-            </div>
-            <div class="skill">
-                <img src="asset/ansible.jpg" alt="Ansible Logo">
-            </div>
-        </div>
-    </section>
-    <a id="linkedin" href="https://www.linkedin.com/in/farbod-mahdian-b86871188/" target="_blank"><img class="social" src="asset/linkedin.gif" alt="linkedin" /></a>
+      </div>
+
+      <div class="line"><span class="prompt">user@workstation:~$</span> open linkedin</div>
+      <div class="line context__line">
+        <a href="https://www.linkedin.com/in/farbod-mahdian-b86871188/" target="_blank" class="linkedin-link">
+          LinkedIn — farbod-mahdian
+        </a>
+      </div>
+
+      <div class="line">
+        <div class="final-msg">Thanks for visiting — enjoy the terminal view!</div>
+      </div>
+    </div>
+
+    <footer>
+      <p>© 2025 Farbod Mahdian — Software Engineer</p>
+    </footer>
+  </main>
+
+  <script src="js/script.js"></script>
 </body>
-<footer>
-    <p>© Copyright 2024 - Farbod Mahdian</p>
-</footer>
 </html>
